# iot-gateway

./: .gitignore  Cargo.toml  README.md
.cargo/: config
config/: config.toml  config.yaml  log4rs.yaml
config/wasi/: gateway_wasi_data.wasm
config/wit/: serial.wit  wasi.wit
gateway/: Cargo.toml
gateway-common/: Cargo.toml
gateway-common/src/: const_str.rs  cos.rs  ext_cos.rs  ext_json.rs  global.rs  lib.rs  packet.rs  pub_use.rs  serial.rs  ssh.rs  toml_config.rs
gateway-data-serial/: Cargo.toml
gateway-data-serial/examples/: ele_collect.rs  env_collect.rs
gateway-data-serial/src/: lib.rs
gateway-derive/: Cargo.toml
gateway-linker/: Cargo.toml
gateway-linker/examples/: linker-check.rs  linker-check2.rs
gateway-linker/src/: lib.rs  lib2.rs
gateway-module/: Cargo.toml
gateway-module/examples/: crc16.rs  serialport.rs
gateway-module/src/: lib.rs  mconfig.rs  mdaemon.rs  mserial.rs  mwasi.rs  mwasmer.rs  pub_use.rs
gateway-module/src/mmqtt/: config.rs  mod.rs
gateway-wasi/: Cargo.toml
gateway-wasi-data/: Cargo.toml
gateway-wasi/src/: lib.rs
gateway/src/: core.rs  ffmpeg.rs  main.rs  mqtt.rs  pub_use.rs  sub_task.rs
gateway/src/ext/: mod.rs  nodemcus.rs  onvif.rs
gateway/src/ext_mqtt/: mod.rs
gateway/src/ext_mqtt/event/: ack_ipc.rs  ele_collect.rs  end_video.rs  env_collect.rs  heart_check.rs  mod.rs  req_images.rs  req_ipc_image.rs  req_video.rs  serial.rs  ssh.rs  upgrade.rs
iot_gateway_derive/: Cargo.toml
iot_gateway_derive/src/: lib.rs
src/: ffmpeg.rs  lib.rs  main.rs  mqtt.rs  sub_task.rs
src/common/: cos.rs  ext_cos.rs  ext_json.rs  global.rs  mod.rs  packet.rs  serial.rs  ssh.rs  toml_config.rs
src/ext/: nodemcus.rs  onvif.rs
src/ext_mqtt/: mod.rs
src/ext_mqtt/event/: ack_ipc.rs  ele_collect.rs  end_video.rs  env_collect.rs  heart_check.rs  mod.rs  req_images.rs  req_ipc_image.rs  req_video.rs  serial.rs  ssh.rs  upgrade.rs
tests/: async-io.rs  mqttc-test.rs  other.rs  sftp.rs  surf.rs  tcp-test-client.rs  tcp-test-server.rs  udp_multicase_node.rs  udp_multicast_gateway.rs
tests/common/: mod.rs
wasi-serial-crates/wasi-env/: Cargo.toml
wasi-serial-crates/wasi-env/src/: lib.rs
