[workspace]

members = ["gateway-derive", "gateway-wasi", "gateway-wasi-data", "gateway-module", "gateway-common"]

exclude = ["config", "tests"]

[profile.release]
#https://nnethercote.github.io/perf-book/build-configuration.html
lto = true
codegen-units = 1
#[build]
#rustflags = ["-C", "link-arg=-fuse-ld=lld"]