[workspace]

members = ["gateway-derive", "gateway-wasi", "gateway-wasi-data", "gateway-module"
    , "gateway-common", "gateway-data-serial", "wasi-serial-crates/wasi-env"]

exclude = ["config", "tests"]

[profile.release]
#https://nnethercote.github.io/perf-book/build-configuration.html
lto = true
codegen-units = 1
#[build]
#rustflags = ["-C", "link-arg=-fuse-ld=lld"]