[package]
name = "gateway-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# no features by default
default = ["prod", "biz"]
prod = []
dev = []
biz = []
support = []
[dependencies]

async-trait = "*"
async-std = { features = ["attributes", "tokio1"], version = "*" }
json_minimal = "*"
log = "*"
anyhow = "*"
futures = "*"

chrono = "*"
regex = "*"
futures-util = "*"
hmac-sha1 = "*"
urlencoding = "*"
mio_httpc = { version = "*", features = ["rtls"] }
sha1 = {features = ["std"], version = "*"}
hex = "*"
md5 = "*"
base64 = "*"
rumqttc = "*"
toml_edit = "*"

uuid = { version = "*", features = ["v4"] }
mac_address = "*"

#futures-util = "0.3.12"
#num-traits = "0.2.14"
#json_minimal = "0.1.3"
##openssl = { version = "0.10.32"}
#mio_httpc = { version = "0.9.5", features = ["rtls"] }
##不支持http
##surf = { version ="2.2.0", features = ["h1-client"] }
##同步，rtls
##ureq = "2.0.2"
#rand = "0.8.3"
#roxmltree = "0.14.0"
#toml_edit = "0.2.0"
##error-chain = "0.12.4"
#heim = { version="0.1.0-rc.1", features=["cpu", "memory", "disk", ]}
#mio-serial = "5.0.1"
#mio = { version = "^0.8", features = ["os-poll"] }
#serialport = "3.3.0"
#clap = "2.32"
#backtrace = "0.3.3"
#gateway-derive = { path = "../gateway-derive"}
#async-trait = "0.1.52"
#anyhow = "1.0.51"