[package]
name = "gateway-data-serial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc = "2.1"
anyhow = "1.0"
log = "0.4"
mio-serial = "5.0.1"
mio = { version = "^0.7", features = ["os-poll", "os-ext"] }

[dev-dependencies]
async-std = { features = ["attributes", "tokio1"], version = "*" }
env_logger = "0.9"
