[package]
name = "gateway-derive"
version = "0.1.0"
authors = ["362254883@qq.com <jmhuang123>"]
edition = "2018"
# 过程宏的实现
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = "1.0.69"
quote = "1.0.9"
#iot_gateway = {path="../../iot-gateway"}
