[package]
name = "gateway-linker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4"

[dev-dependencies]
tokio = { version = "1.15", features = ["time", "sync", "macros", "rt-multi-thread"]}
async-channel = "1.6"
env_logger = "0.9"

rand = "0.8"
