[package]
name = "gateway-module"
version = "0.1.0"
edition = "2021"
description = "定义各个（模块）功能"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
async-std = { features = ["attributes", "tokio1"], version = "1.9.0" }
config = { version = "^0.11", default-features = false, features = ["yaml"] }
rumqttc = "0.10.0"
log = "0.4.0"
serde = { version = "^1.0", default-features = false, features = ["derive", "std"] }
futures = "0.3.12"
mio-serial = "5.0.1"
mio = { version = "^0.7", features = ["os-poll", "os-ext"] }

[dev-dependencies]
mio-serial = "5.0.1"
mio = { version = "^0.7", features = ["os-poll", "os-ext"] }
crc = "2.1"
#
#wasmer = "2.1.0"
#wasmer-compiler-cranelift = "2.1.0"
#wasmer-engine-universal = "2.1.0"
#wasmer-wasi = "2.1.0"
#

